# rastor

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: documentation-request.md
examples/: circle.rs  collision.rs  growing_rect.rs  planet.rs  rotating_rect.rs  ui.rs  z_indexing.rs
src/: buffer.rs  key.rs  lib.rs  main.rs  utils.rs
src/shapes/: circle.rs  line.rs  mod.rs  rectangle.rs  triangle.rs
src/types/: mod.rs  number.rs  pos2.rs  vec2.rs
src/ui/: container.rs  text.rs
src/ui/container/: mod.rs  style.rs
src/ui/style/: border.rs  mod.rs
src/ui/text/: mod.rs  style.rs
