[package]
name = "rastor"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "A terminal-based game engine"
homepage = "https://github.com/thecatthatmeows/glyph"
repository = "https://github.com/thecatthatmeows/glyph"
readme = "README.md"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
glam = "0.32.0"
lazy_static = "1.5.0"
num-traits = "0.2.19"
parking_lot = "0.12.5"
rand = "0.10.0"
ratatui = "0.30.0"
