[package]
name = "rastor"
version = "0.1.10"
edition = "2024"
license = "MIT"
description = "A terminal-based game engine"
homepage = "https://github.com/thecatthatmeows/rastor"
repository = "https://github.com/thecatthatmeows/rastor"
readme = "README.md"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false
incremental = false
debug = 0
debug-assertions = false
strip = true

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
glam = "0.32.0"
lazy_static = "1.5.0"
num-traits = "0.2.19"
parking_lot = "0.12.5"
rand = "0.10.0"
ratatui = "0.30.0"
